# gov-transparency-rpa

./: .gitignore  pyproject.toml
app/core/: config.py
app/models/: benefit.py
app/services/: transparency_parser.py
tests/services/: test_transparency_parser.py
