[project]
name = "gov-transparency-rpa"
version = "0.1.0"
description = "Automated RPA bot to extract citizen benefit data from Brazil's transparency portal."
authors = [
    {name = "Gil",email = "gilberto.s.silveira@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
