[tool.poetry]
name = "gov-transparency-rpa"
version = "0.1.0"
description = "Automated RPA bot to extract citizen benefit data from Brazil's transparency portal."
authors = ["Gil <gilberto.s.silveira@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
pydantic = "^2.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
